# sdk

./: .dockerignore  .yarnrc.yml  Cargo.toml  README.md  build.rs  encode-wav.ts  example.js  index.cjs  index.d.cts  linux-shareable-content.cjs  native.cjs  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.ts  linux-capture.spec.ts  linux-pulse-fixture.cjs
docker/: linux-dev.Dockerfile
playground/: package.json  tsconfig.json  vite.config.ts
playground/server/: gemini.ts  main.ts
playground/web/: app.tsx  main.tsx  types.ts  utils.ts
playground/web/components/: app-item.tsx  app-list.tsx  global-record-button.tsx  icons.tsx  saved-recording-item.tsx  saved-recordings.tsx
scripts/: docker-linux.sh  test-linux-docker.sh
src/: audio_decoder.rs  lib.rs
src/linux/: mod.rs
src/macos/: audio_buffer.rs  audio_stream_basic_desc.rs  ca_tap_description.rs  device.rs  pid.rs  screen_capture_kit.rs  tap_audio.rs  utils.rs
src/windows/: audio_capture.rs
